--- a/web/ui/static/css/dashboard.css
+++ b/web/ui/static/css/dashboard.css
@@ -325,13 +325,13 @@ body {
   .filter-button.reset {
     background-color: var(--filter-reset); }
 
-.products-area-wrapper {
+.devices-area-wrapper {
   width: 100%;
   max-height: 100%;
   overflow: auto;
   padding: 0 4px; }
 
-.tableView .products-header {
+.tableView .devices-header {
   display: flex;
   align-items: center;
   border-radius: 4px;
@@ -339,46 +339,46 @@ body {
   position: sticky;
   top: 0; }
 
-.tableView .products-row {
+.tableView .devices-row {
   display: flex;
   align-items: center;
   border-radius: 4px; }
-  .tableView .products-row:hover {
+  .tableView .devices-row:hover {
     box-shadow: var(--filter-shadow);
     background-color: var(--app-content-secondary-color); }
-  .tableView .products-row .cell-more-button {
+  .tableView .devices-row .cell-more-button {
     display: none; }
 
-.tableView .product-cell {
+.tableView .device-cell {
   flex: 1;
   padding: 8px 16px;
   color: var(--app-content-main-color);
   font-size: 14px;
   display: flex;
   align-items: center; }
-  .tableView .product-cell img {
+  .tableView .device-cell img {
     width: 32px;
     height: 32px;
     border-radius: 6px;
     margin-right: 6px; }
   @media screen and (max-width: 780px) {
-    .tableView .product-cell {
+    .tableView .device-cell {
       font-size: 12px; }
-      .tableView .product-cell.image span {
+      .tableView .device-cell.image span {
         display: none; }
-      .tableView .product-cell.image {
+      .tableView .device-cell.image {
         flex: 0.2; } }
   @media screen and (max-width: 520px) {
-    .tableView .product-cell.category, .tableView .product-cell.sales {
+    .tableView .device-cell.category, .tableView .device-cell.sales {
       display: none; }
-    .tableView .product-cell.status-cell {
+    .tableView .device-cell.status-cell {
       flex: 0.4; }
-    .tableView .product-cell.stock, .tableView .product-cell.price {
+    .tableView .device-cell.stock, .tableView .device-cell.price {
       flex: 0.2; } }
   @media screen and (max-width: 480px) {
-    .tableView .product-cell.stock {
+    .tableView .device-cell.stock {
       display: none; }
-    .tableView .product-cell.price {
+    .tableView .device-cell.price {
       flex: 0.4; } }
 .tableView .sort-button {
   padding: 0;
@@ -399,7 +399,6 @@ body {
 
 .status {
   border-radius: 4px;
-  display: flex;
   align-items: center;
   padding: 4px 8px;
   font-size: 12px; }
@@ -427,9 +426,9 @@ body {
   @media screen and (max-width: 520px) {
     .gridView {
       margin: 0; } }
-  .gridView .products-header {
+  .gridView .devices-header {
     display: none; }
-  .gridView .products-row {
+  .gridView .devices-row {
     margin: 8px;
     width: calc(25% - 16px);
     background-color: var(--app-content-secondary-color);
@@ -438,24 +437,24 @@ body {
     cursor: pointer;
     transition: transform .2s;
     position: relative; }
-    .gridView .products-row:hover {
+    .gridView .devices-row:hover {
       transform: scale(1.01);
       box-shadow: var(--filter-shadow); }
-      .gridView .products-row:hover .cell-more-button {
+      .gridView .devices-row:hover .cell-more-button {
         display: flex; }
     @media screen and (max-width: 1024px) {
-      .gridView .products-row {
+      .gridView .devices-row {
         width: calc(33.3% - 16px); } }
     @media screen and (max-width: 820px) {
-      .gridView .products-row {
+      .gridView .devices-row {
         width: calc(50% - 16px); } }
     @media screen and (max-width: 520px) {
-      .gridView .products-row {
+      .gridView .devices-row {
         width: 100%;
         margin: 8px 0; }
-        .gridView .products-row:hover {
+        .gridView .devices-row:hover {
           transform: none; } }
-    .gridView .products-row .cell-more-button {
+    .gridView .devices-row .cell-more-button {
       border: none;
       padding: 0;
       border-radius: 4px;
@@ -472,18 +471,18 @@ body {
       color: #fff;
       cursor: pointer;
       display: none; }
-  .gridView .product-cell {
+  .gridView .device-cell {
     color: var(--app-content-main-color);
     font-size: 14px;
     margin-bottom: 8px; }
-    .gridView .product-cell:not(.image) {
+    .gridView .device-cell:not(.image) {
       display: flex;
       align-items: center;
       justify-content: space-between; }
-    .gridView .product-cell.image span {
+    .gridView .device-cell.image span {
       font-size: 18px;
       line-height: 24px; }
-    .gridView .product-cell img {
+    .gridView .device-cell img {
       width: 100%;
       height: 140px;
       object-fit: cover;
@@ -491,3 +490,50 @@ body {
       margin-bottom: 16px; }
   .gridView .cell-label {
     opacity: 0.6; }
+
+a {
+  text-decoration: none; }
+
+.block_custom .descriptions {
+  line-height: 150%;
+  display: block;
+  font-size: 60%; }
+
+.block_custom .info {
+  display: block; }
+
+.block_custom span {
+  font-size: 70%; }
+
+.notify {
+  line-height: 150%;
+  padding: 16px;
+  background-color: var(--app-bg);
+  height: 100%;
+  flex: 1;
+  max-height: 100%;
+  display: flex;
+  flex-direction: column; }
+  .notify-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 4px; }
+  .notify-headerText {
+    color: var(--app-content-main-color);
+    font-size: 24px;
+    line-height: 32px;
+    margin: 0; }
+  .notify-headerButton {
+    background-color: var(--action-color);
+    color: #fff;
+    font-size: 14px;
+    line-height: 24px;
+    border: none;
+    border-radius: 4px;
+    height: 32px;
+    padding: 0 16px;
+    transition: .2s;
+    cursor: pointer; }
+    .notify-headerButton:hover {
+      background-color: var(--action-color-hover); }
